[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/enemySpriteSheets/robot/trueIdle/cop1.png" type="Texture" id=1]
[ext_resource path="res://assets/enemySpriteSheets/robot/run/cop8.png" type="Texture" id=2]
[ext_resource path="res://assets/enemySpriteSheets/robot/trueIdle/cop4.png" type="Texture" id=3]
[ext_resource path="res://assets/enemySpriteSheets/robot/run/cop4.png" type="Texture" id=4]
[ext_resource path="res://assets/enemySpriteSheets/robot/run/cop2.png" type="Texture" id=5]
[ext_resource path="res://assets/enemySpriteSheets/robot/run/cop1.png" type="Texture" id=6]
[ext_resource path="res://assets/enemySpriteSheets/robot/trueIdle/cop2.png" type="Texture" id=7]
[ext_resource path="res://assets/enemySpriteSheets/robot/run/cop9.png" type="Texture" id=8]
[ext_resource path="res://assets/enemySpriteSheets/robot/run/cop10.png" type="Texture" id=9]
[ext_resource path="res://assets/enemySpriteSheets/robot/run/cop5.png" type="Texture" id=10]
[ext_resource path="res://assets/enemySpriteSheets/robot/trueIdle/cop3.png" type="Texture" id=11]
[ext_resource path="res://assets/enemySpriteSheets/robot/run/cop7.png" type="Texture" id=12]
[ext_resource path="res://assets/enemySpriteSheets/robot/run/cop3.png" type="Texture" id=13]
[ext_resource path="res://assets/enemySpriteSheets/robot/run/cop6.png" type="Texture" id=14]
[ext_resource path="res://assets/enemySpriteSheets/robot/idle/cop2.png" type="Texture" id=15]
[ext_resource path="res://assets/enemySpriteSheets/robot/idle/cop3.png" type="Texture" id=16]
[ext_resource path="res://actors/robot/robot.gd" type="Script" id=17]
[ext_resource path="res://actors/robot/enemyState.gd" type="Script" id=18]
[ext_resource path="res://actors/robot/IS_SHOOTING.gd" type="Script" id=19]
[ext_resource path="res://actors/robot/IS_IDLE.gd" type="Script" id=20]
[ext_resource path="res://actors/robot/IS_WALKING.gd" type="Script" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "shoot",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 24.5 )

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle2"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "run_left"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -83, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "run_right"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "run", "run" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -83, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "shoot" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Robot" type="Area2D"]
position = Vector2( -83, 0 )
collision_layer = 4
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true
flip_h = true

[node name="enemyState" type="Node" parent="."]
script = ExtResource( 18 )

[node name="IS_IDLE" type="Node" parent="enemyState"]
script = ExtResource( 20 )

[node name="IS_SHOOTING" type="Node" parent="enemyState"]
script = ExtResource( 19 )

[node name="IS_WALKING" type="Node" parent="enemyState"]
script = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.5 )
shape = SubResource( 2 )

[node name="text" type="RichTextLabel" parent="."]
margin_left = -63.0
margin_top = -65.0
margin_right = 64.0
margin_bottom = -25.0

[node name="RayCast1" type="RayCast2D" parent="."]
position = Vector2( 0, 23 )
enabled = true
cast_to = Vector2( 250, 0 )

[node name="RayCast2" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 250, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 5 )
anims/idle2 = SubResource( 7 )
anims/run_left = SubResource( 3 )
anims/run_right = SubResource( 4 )
anims/shoot = SubResource( 6 )

[node name="SpawnBulletRight" type="Node2D" parent="."]
position = Vector2( 16, -1 )

[node name="SpawnBulletLeft" type="Node2D" parent="."]
position = Vector2( 16, -1 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
